--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "keywords": [],
   "author": "gab",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "cli-table": "^0.3.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "node-fetch": "^2.6.1",
